[package]
name = "rIC3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aig = "=0.2.6"
satif = "=0.1.3"
satif-minisat = "=0.2.4"
logic-form = "=0.2.9"
gipsat = { path = "../gipsat" }
clap = { version = "4.3.0", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
giputils = "=0.2.4"
transys = { path = "../transys" }


[features]
default = ["no_bound_check"]
no_bound_check = [
    "logic-form/no_bound_check",
    "giputils/no_bound_check",
    "gipsat/no_bound_check",
    "transys/no_bound_check",
]
